--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set Timezone
+        uses: szenius/set-timezone@v2.0
+        with:
+          timezoneLinux: "Asia/Shanghai"
+
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
@@ -24,10 +29,11 @@ jobs:
       - name: Create Snapshot
         run: go run main.go
 
-      - name: git commit
+      - uses: actions/checkout@v4
         run: |
-          git config user.name github-actions \
-          git config user.email github-actions@users.noreply.github.com \
-          git add ./docs/ \
-          git commit -m "Create Snapshot By $(date)" \
+          date > generated.txt
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "generated"
           git push
