--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Snapshot
         run: go run main.go
 
-      - uses: actions/checkout@v4
+      - name: Commit and Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
