--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./docs/
+          git add ./docs/ ./README.md
           git commit -m "Create Snapshot By $(date)"
           git push origin main
