--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -46,7 +46,7 @@ jobs:
         if: failure() && env.self_destruct == 'yes'
         run: |
           echo "Start the self-destruct process..."
-          sed -i 's/- cron:/# - cron:/' .github/workflows/main.yml
+          sed -i 's/- cron:/# - cron:/' .github/workflows/cron.yml
 
       - name: Commit and Push
         if: success() || env.self_destruct == 'yes'
@@ -58,6 +58,6 @@ jobs:
           fi
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./docs/ ./README.md .github/workflows/main.yml
+          git add ./docs/ ./README.md .github/workflows/cron.yml
           git commit -m "${commit_message}"
           git push origin main
